fix item spacing

--- a/src/Items.css
+++ b/src/Items.css
@@ -1,9 +1,7 @@
 .items{
     position: relative;
     max-width: 180%;
-    /* background-color: rgba(43, 121, 106, 0.4); */
     box-shadow: inset 0 0 15px rgba(43, 121, 106, 0.7), 0 0 4px 2px rgba(70, 70, 70, .7);
-    /* box-shadow: 2px 2px 6px 4px #222222; */
     padding: 24px;
     margin: 8px;
     display: flex;
@@ -22,11 +20,6 @@
     margin-left: 24px;
 }
 
-.item-price{
-    display: inline-block;
-    margin-right: 15px;
-}
-
 .item-name:hover {
     color: #ccc;
 }
@@ -36,8 +29,8 @@
 }
 
 .item-image {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 14rem;
+    max-height: 14rem;
 }
 
 .item-add {
@@ -80,7 +73,16 @@
     cursor: pointer;
 }
 
+.item-hs {
+    width: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .quantity-buttons {
+    width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-evenly;
